# linkedin-network-run

./: .browser-echo-mcp.json  .gitignore  AGENTS.md  Cargo.toml  README.md  go.mod  pyproject.toml
apps/: __init__.py  cli.py  compat.py
apps/comment_extractor/: __init__.py  browser.py  cli.py  contracts.py  linkedin_post_comments.py
apps/cutover/: __init__.py  automation_audit.py  cli.py
apps/network_automation/: __init__.py  browser.py  cli.py  models.py  old_state.py  reports.py  service.py  store.py  suppression.py
apps/opportunity_intel/: __init__.py  cli.py  company_pages.py  contracts.py  experiments.py  imports.py  normalization.py  post_discovery.py  post_prefilter.py  ranking.py  review_queue.py  store.py  (+2 more)
docs/: architecture.md  cutover-acceptance-audit.md  cutover-automation-inventory.md  cutover-checklist.md  cutover-execution-runbook.md  cutover-review-summary.md  opportunity-source-batch-v0.md  orchestration-status.md  python-linkedin-tools-monorepo-prd.md  python-linkedin-tools-multi-thread-execution.md  python-linkedin-tools-pre-port-salvage.md
scripts/: salesnav-acceptance-outcomes.js  salesnav-accepted-research.js  salesnav-account-capture.js  salesnav-audit.js  salesnav-capture.js  salesnav-cdp-audit.js  salesnav-cdp-saved-searches.js  salesnav-pending-capture.js  salesnav-pending-withdraw-current.js  salesnav-pending-withdraw-one.js  salesnav-send-message-one.js  salesnav-send-one.js
src/: acceptance.rs  accepted_drafts.rs  browser_ops.rs  cli.rs  commands.rs  main.rs  model.rs  pending.rs  playwriter.rs  reports.rs  run_ops.rs  salesnav.rs  store.rs  tests.rs  util.rs
tests/: test_browser_layer.py  test_common_io.py  test_common_schemas.py  test_common_urls.py  test_experiment_helpers.py  test_migration_compat.py  test_opportunity_intel.py  test_recruiter_agency_outreach.py  test_report_helpers.py  test_review_ui.py  test_salesnav_primitives.py  test_scaffold.py  test_storage_migrations.py
(+146 files in other folders)
